<resources>
    <string name="app_name" translatable="false">Foodies</string>

    <!-- Bottom nav menu -->
    <string name="title_home">Головна</string>
    <string name="title_add_post">Додати пост</string>
    <string name="title_favourites">Улюблені</string>

    <!-- Toolbar menu -->
    <string name="title_search">Пошук</string>
    <string name="query_hint">Пошук рецептів…</string>
    <string name="title_left_menu">Меню</string>

    <!-- Left sidebar -->
    <string name="user_picture_hint">Користувач</string>
    <string name="title_user_details">Детальніше</string>
    <string name="title_user_sign_out">Вийти</string>
    <string name="title_user_sign_in">Увійти</string>
    <string name="title_user_anauthed">Бажаєте публікувати свої рецепти?</string>
    <!-- FOR GOOGLE API -->
    <string name="server_client_id" translatable="false">55827698592-8qj8mci54h1k0jboe3nlc1b6bsl2rl9d.apps.googleusercontent.com</string>


    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="user_card_error">Щось пішло не так :(</string>
    <string name="user_card_google_services_error">" Помилка підключення Google Play :("</string>
    <string name="user_card_server_error">Трапилася помилка на сервері  :(</string>
    <string name="user_card_timeout_error">Помилка підключення до серверу  :(</string>
    <string name="hash_tag" translatable="false">#</string>
    <string name="seconds_ago">щойно</string>
    <string name="minutes_ago">хв назад</string>
    <string name="hours_ago">год назад</string>
    <string name="days_ago">д назад</string>
</resources>
